Bug 900346 (part 1) - Fix peekTokenSameLine().  r=jwalden.